test/compile_errors/stage1/obj/compile_log_a_pointer_to_an_opaque_value.zig
export fn entry() void {
    @compileLog(@ptrCast(*const anyopaque, &entry));
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:5: error: found compile log statement
